code review 1 - golang